syntax = "proto3";

package bst.v1;

import "bst/v1/area.proto";
import "bst/v1/location.proto";

option go_package = "github.com/tsuyoyo/bst-pj-proto/gen/go/bst/v1;bstv1";

service LocationService {
  // POST /locations
  rpc CreateLocation(CreateLocationRequest) returns (CreateLocationResponse);
  // GET /locations
  rpc ListLocations(ListLocationsRequest) returns (ListLocationsResponse);
  // GET /locations/{id}
  rpc GetLocation(GetLocationRequest) returns (GetLocationResponse);
  // PUT /locations/{id}
  rpc UpdateLocation(UpdateLocationRequest) returns (UpdateLocationResponse);
  // DELETE /locations/{id}
  rpc DeleteLocation(DeleteLocationRequest) returns (DeleteLocationResponse);
}

message CreateLocationRequest {
  string name            = 1;
  string google_maps_url = 2;
  string additional_info = 3;
  int32  area_id         = 4;
}

message CreateLocationResponse {
  Location location = 1;
}

message ListLocationsRequest {
  int32  page_size  = 1;
  string page_token = 2;
  Area   area       = 3;
}

message ListLocationsResponse {
  repeated Location locations       = 1;
  string            next_page_token = 2;
  int32             total_size      = 3;
}

message GetLocationRequest {
  int32 location_id = 1;
}

message GetLocationResponse {
  Location location = 1;
}

message UpdateLocationRequest {
  int32           location_id     = 1;
  optional string name            = 2;
  optional string google_maps_url = 3;
  optional string additional_info = 4;
  optional int32  area_id         = 5;
}

message UpdateLocationResponse {
  Location location = 1;
}

message DeleteLocationRequest {
  int32 location_id = 1;
}

message DeleteLocationResponse {
  bool success = 1;
}